# gtm-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cli.py  config-test.json  config-windows.json  config.json  fastmcp_gtm_helpers.py  fastmcp_gtm_server.py  fastmcp_gtm_write_tools.py  gtm_client.py  gtm_client_fixed.py  gtm_components.py  mcp_server.py  pyproject.toml  requirements.txt  run_server.sh  simple_test_server.py  test_components.py  test_helpers.py  test_mcp_server.py  test_server.py  test_workflow.json
